--- a/application/admin/view/auths/users.html
+++ b/application/admin/view/auths/users.html
@@ -46,7 +46,7 @@
         var table = layui.table,form = layui.form,$ = layui.jquery;
         var tableIn = table.render({
             elem: '#list',
-            url: '{:url("users")}',
+            url: '{:url("userslist")}',
             method:'post',
 			toolbar: '#topBtn',
 			title:'{:lang("admin")}{:lang("list")}',
